--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+
     "lint": "eslint .",
     "preview": "vite preview"
   },
